This file contains old changelogs and it's refreshed periodically.

= 5.3.2 =
* [Fixed] Double post notification called for post revisions.
* [Fixed] Wrong `wordpress` setting slug caused the option to not be saved.
* [Added] `NOTIFICATION_VERSION` constant.
* [Added] `remove_merge_tag` trigger method.

= 5.3.1 =
* [Added] Initial unit tests.
* [Fixed] Comment replied trigger not called from wp-admin.

= 5.3.0 =
* [Changed] Added parent class for user triggers.
* [Changed] Added parent class for media triggers.
* [Changed] PHP requirement to 5.6.
* [Changed] Freemius updated to version 2.1.3.
* [Changed] Uninstallation logic moved to the Freemius handler.
* [Changed] Merge Tag validation now accepts empty values.
* [Changed] Post Trigger postponing to avoid looping.
* [Changed] Custom Fields postponing causing the loops, now it's in a separate integration class.
* [Changed] Minimum WordPress version to 4.9.
* [Changed] Plugin autoload function.
* [Added] Global date, time and datetime merge tags for trigger execution date.
* [Added] `notification/scripts/allowed_hooks` filter to control where the scripts are loaded.
* [Added] Color Picker field.
* [Added] Image field.
* [Added] User role changed trigger.
* [Added] Post scheduled trigger.
* [Added] `notification/scripts` action.
* [Added] Comment datetime merge tag.
* [Added] Debug log.
* [Added] Plugin triggers.
* [Added] Theme triggers.
* [Added] `notification/data/save` action.
* [Added] Usage tracking. No data is tracked unless allowed.
* [Fixed] Comment type check causing the comment triggers failing.
* [Fixed] Postponing looping over itself.
* [Fixed] Fatal error with Triggers select on certain conditions.
* [Fixed] Date and Time merge tags giving values of 0.
* [Fixed] User password reset request being called upon registration.
* [Fixed] Timezone being ignored in some merge tags.

= 5.2.4 =
* [Fixed] When `Strip all shortcodes` setting is disabled, the shortcodes are rendered.
* [Fixed] Coding Standards.